--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@
             <artifactId>angular-route</artifactId>
             <version>1.8.2</version>
         </dependency>
+          <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
     </dependencies>
 
     <build>
